add java agents